# RoboTheatreWS

./: .gitignore  Battery Schematics.drawio  Motors  README.md  comandi utili  script.json
pictures/: Legenda  Main Controller.drawio  arduino  audio_player  body_manager  eyes_manager  joystick_node  laser_node  speech_monitor
src/BlueCoin/: BlueCoinController.cpp  BlueCoinController.h  CMakeLists.txt  Exceptions.cpp  main.cpp
src/BlueCoin/ASTSerialLib/: CMakeLists.txt  Makefile  cmake_install.cmake
src/BlueCoin/ASTSerialLib/Include/: ASTSerialLib.h  CComPort_noQt.h  CCronometer.h  SerialComm.h  Serial_CMD.h  serial_protocol.h
src/BlueCoin/ASTSerialLib/Source/: ASTSerialLib.cpp  CComPort_noQt.cpp  CCronometer.cpp  SerialComm.cpp  serial_protocol.c
src/BlueCoin/AudioSerialLib/: AudioModuleSerialLib.cpp  AudioModuleSerialLib.h  CMakeLists.txt  Makefile  cmake_install.cmake
src/arduino-sketches/ArduinoSketch1-0/: ArduinoSketch1-0.ino  body_manager.cpp  body_manager.h  con_millis.ino  defines.h  eyes_manager.cpp  eyes_manager.h  helper_methods.cpp  helper_methods.h  prova.cpp  robe.cpp
src/audio_manager/: CMakeLists.txt  package.xml
src/audio_player/: CMakeLists.txt  package.xml
src/audio_player_actionlib/: CMakeLists.txt  package.xml  setup.py
src/audio_player_py/: CMakeLists.txt  package.xml  setup.py
src/body_manager/: CMakeLists.txt  package.xml
src/cmd_vel_manager/: CMakeLists.txt  package.xml
src/cmd_vel_publisher/: CMakeLists.txt  package.xml
src/core/joystick/: CMakeLists.txt  package.xml
src/core/joystick/include/: joystick_node.h
src/core/joystick/launch/: joystick.launch
src/core/joystick/params/: joystick_params.yaml
src/core/joystick/src/: joystick_handler_node.cpp  joystick_node.cpp
src/core/triskarone/triskar/: CMakeLists.txt
src/core/triskarone/triskar/config/: airlab2.pgm  airlab2.yaml  airlab_arena.pgm  airlab_arena.yaml  airlab_prova2.pgm  airlab_prova2.yaml  airlab_theatre.pgm  airlab_theatre.yaml  airlab_theatre_new.yaml  airlab_theatre_new_edited.pgm  atrio.pgm  atrio.yaml  prova_atrio.pgm  prova_atrio.yaml  sala_conferenze.yaml  sala_conferenze_mod.pgm
src/core/triskarone/triskar/launch/: arduino.launch  audio.launch  prova_robot.launch  triskarone.launch  triskarone_slam.launch
src/eyes_manager/: CMakeLists.txt  package.xml
src/main_controller/: CMakeLists.txt  package.xml
src/mp3_player/: CMakeLists.txt  package.xml
src/speech_monitor/: CMakeLists.txt  package.xml
src/triskarone_msgs/: CMakeLists.txt  package.xml
(+82 files in other folders)
