<?xml version="1.0"?>
<package>
  <name>joystick</name>
  <version>0.0.1</version>
  <description>The triskar_joystick package.
  
  </description>

  <maintainer email="ewerton.lopes@polimi.it">ewerlopes</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>heartbeat</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>heartbeat</run_depend>
  


</package>
